--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<script type="text/javascript" src="script.js"></script>
 		<title>Excuse Generator</title>
 	</head>
-	<body onload="setInterval(testing, 1700);">
+	<body onload="setInterval(testing, 1700)">
 		<div class='wrapper'>
 			<p>OMG! you will not believe me but...</p>
 			<p id='excuse'>My sister threw my phone out the window</p>	
-		</div>
+        </div>
 	</body>
 </html>
